@@ -10,7 +10,7 @@ if not same_type(ids, []):
     ids = [ids]
 
 for id in ids:
-    context.move_object_up(id)
+    context.moveObjectsUp(id)
 
 # Keeping the choosen ids while redisplaying the list
 context.REQUEST.SESSION['choosen_ids'] = ids
