@@ -60,6 +60,8 @@ Bug fixes:
 - fix #846: Added backward compatibility code to avoid recursion on the
   getBaseUrl script just before the portal_url update.
 - Replaced incorrect code producing broken urls using virtual hosting.
+- Changed the old orderedFoldered method names to the new OrderedSupport names,
+  such as "move_object_up" to "moveObjectsUp", et al.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in the installer.
